// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSelector it renders the loading screen first 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c1 {
  display: inline-block;
  height: 48px;
  width: 48px;
  background-color: #5E26FF;
}

.c2 {
  display: inline-block;
  height: 24px;
  width: 24px;
  background-color: rgb(26,0,102);
  -webkit-animation-name: bvGDKI;
  animation-name: bvGDKI;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <div
    class="c0"
    display="flex"
    height="100vh"
    width="100%"
  >
    <span
      class="c1"
    >
      <span
        class="c2"
      />
    </span>
    <h4
      class="c3"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Loading...
    </h4>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in state with the title and helperText 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-bottom: 10px;
  background-color: #d9e0f2;
  display: block;
  width: 100%;
  overflow: hidden;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 32px;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: #5E26FF;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.5rem;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  grid-gap: 0.25em;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c29 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c30 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c32 {
  min-width: 0;
  box-sizing: border-box;
  color: var(--purple-medium);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c36 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c40 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c44 {
  min-width: 0;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c4 {
  color: #5E26FF;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c14 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c35 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c6 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 8px;
}

.c27 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c43 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: left;
  padding: 0;
  margin: 0;
  margin-top: 4px;
}

.c37 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  width: 50%;
  margin: 0;
}

.c28 {
  cursor: pointer;
  border: 1px solid #E0D7FE;
  background-color: transparent;
  border-color: #E0D7FE;
  color: #E0D7FE;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c28:hover {
  opacity: 0.8;
}

.c33 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c33:hover {
  opacity: 0.8;
}

.c23 {
  width: 24;
  height: 24;
}

.c22 {
  height: auto;
  cursor: pointer;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c25 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c21:hover .c24 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c19 {
  color: var(--white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19:hover {
  color: var(--white);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c31 {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c31:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c38 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  width: 50%;
  display: inline-block;
  height: 48px;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c38:hover {
  background: #bacbf7;
  cursor: text;
}

.c38:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c39 {
  -moz-appearance: textfield;
}

.c39::-webkit-outer-spin-button,
.c39::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c41 {
  background: #1AD08F;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c41:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c42 {
  background: #E4EBFC;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c42:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
  margin-left: 8px;
}

.c8:hover {
  border-bottom: 2px solid #5E26FF;
}

.c9 {
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
}

<div>
  <div
    class="c0"
    display="block"
    overflow="hidden"
    width="100%"
  >
    <div
      class="c1"
      display="flex"
    >
      <div
        class="c2"
        color="core.white"
        display="flex"
        size="6"
      >
        <h3
          class="c3"
        >
          Ac
        </h3>
      </div>
      <h2
        class="c4"
        color="core.primary"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Please select an account.
      </h2>
    </div>
    <div
      class="c5"
    >
      <p
        class="c6"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Your single seed phrase creates hundreds of individual accounts. We're showing you the first 5.
      </p>
      <p
        class="c7"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Don't see an account you're looking for? 
        <a
          class="c8"
          color="core.primary"
          font-size="2"
          href="https://reading.supply/@glif/not-seeing-the-right-address-when-accessing-the-glif-wallet-NE1FhV"
          target="_blank"
        >
          Learn More
        </a>
      </p>
    </div>
  </div>
  <div
    class="c9"
  >
    <div
      class="c10"
      color="card.account.color"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c12"
          color="card.account.color"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            0
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Default
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c19"
              href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1z225 ... 6z6wgi
            </a>
            <div
              class="c20"
              color="var(--white)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c28"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            1
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            1
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb1uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb1uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            2
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            2
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb2uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            3
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            3
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb3uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb3uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            4
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            4
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb4uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb4uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c34"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <h2
        class="c35"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Create new account
      </h2>
      <div
        class="c17"
      >
        <div
          class="c36"
          display="flex"
        >
          <h4
            class="c37"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
            width="50%"
          >
            Account index
          </h4>
          <input
            class="c38 c39"
            display="inline-block"
            height="6"
            value="5"
            width="50%"
          />
        </div>
        
      </div>
      <div
        class="c17"
      >
        <div
          class="c40"
          display="flex"
        >
          <button
            class="c41"
            display="flex"
            font-family="RT-Alias-Grotesk"
            font-size="1"
            font-weight="1"
            height="6"
            width="50%"
          >
            Legacy address
          </button>
          <button
            class="c42"
            display="flex"
            font-family="RT-Alias-Grotesk"
            font-size="1"
            font-weight="1"
            height="6"
            width="50%"
          >
            Normal address
          </button>
        </div>
        <p
          class="c43"
          font-family="RT-Alias-Grotesk"
          font-size="15px"
          font-weight="400"
        >
          *Not recommended
        </p>
      </div>
      <div
        class="c44"
        display="flex"
        width="100%"
      >
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Create
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountSelector it renders the wallets in state, and an option to create the next wallet 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-bottom: 10px;
  background-color: #d9e0f2;
  display: block;
  width: 100%;
  overflow: hidden;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border-color: #5E26FF;
  background-color: #5E26FF;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 32px;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: #5E26FF;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.5rem;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  grid-gap: 0.25em;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c29 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c30 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c32 {
  min-width: 0;
  box-sizing: border-box;
  color: var(--purple-medium);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: hsla(0,0%,90%,0);
  color: colors.core.black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c36 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c40 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c44 {
  min-width: 0;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c4 {
  color: #5E26FF;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 8px;
}

.c14 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c35 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c6 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 8px;
}

.c27 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
  margin-bottom: 0;
}

.c43 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: left;
  padding: 0;
  margin: 0;
  margin-top: 4px;
}

.c37 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  width: 50%;
  margin: 0;
}

.c28 {
  cursor: pointer;
  border: 1px solid #E0D7FE;
  background-color: transparent;
  border-color: #E0D7FE;
  color: #E0D7FE;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c28:hover {
  opacity: 0.8;
}

.c33 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c33:hover {
  opacity: 0.8;
}

.c23 {
  width: 24;
  height: 24;
}

.c22 {
  height: auto;
  cursor: pointer;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c25 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c21:hover .c24 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c19 {
  color: var(--white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19:hover {
  color: var(--white);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c31 {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c31:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c38 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  width: 50%;
  display: inline-block;
  height: 48px;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c38:hover {
  background: #bacbf7;
  cursor: text;
}

.c38:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c39 {
  -moz-appearance: textfield;
}

.c39::-webkit-outer-spin-button,
.c39::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c41 {
  background: #1AD08F;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c41:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c42 {
  background: #E4EBFC;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  outline: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border: 0;
  font-size: 1rem;
  font-weight: 400;
  font-family: RT-Alias-Grotesk;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c42:hover {
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
  cursor: pointer;
  background: props.theme.colors.input.background.valid;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
  margin-left: 8px;
}

.c8:hover {
  border-bottom: 2px solid #5E26FF;
}

.c9 {
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
}

<div>
  <div
    class="c0"
    display="block"
    overflow="hidden"
    width="100%"
  >
    <div
      class="c1"
      display="flex"
    >
      <div
        class="c2"
        color="core.white"
        display="flex"
        size="6"
      >
        <h3
          class="c3"
        >
          Ac
        </h3>
      </div>
      <h2
        class="c4"
        color="core.primary"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Switch Accounts
      </h2>
    </div>
    <div
      class="c5"
    >
      <p
        class="c6"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Your single seed phrase creates hundreds of individual accounts. We're showing you the first 5.
      </p>
      <p
        class="c7"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Don't see an account you're looking for? 
        <a
          class="c8"
          color="core.primary"
          font-size="2"
          href="https://reading.supply/@glif/not-seeing-the-right-address-when-accessing-the-glif-wallet-NE1FhV"
          target="_blank"
        >
          Learn More
        </a>
      </p>
    </div>
  </div>
  <div
    class="c9"
  >
    <div
      class="c10"
      color="card.account.color"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c12"
          color="card.account.color"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            0
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Default
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c19"
              href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1z225 ... 6z6wgi
            </a>
            <div
              class="c20"
              color="var(--white)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c28"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            1
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            1
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb1uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb1uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            2
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            2
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb2uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb2uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            3
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            3
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb3uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb3uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c29"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c11"
        display="flex"
      >
        <div
          class="c30"
          color="colors.core.black"
          display="flex"
          size="6"
        >
          <h3
            class="c3"
          >
            4
          </h3>
        </div>
        <div
          class="c13"
          display="flex"
        >
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            Account 
            4
          </h2>
          <div
            class="c15"
            display="flex"
          />
        </div>
      </div>
      <div
        class="c16"
        display="flex"
        font-size="4"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            display="flex"
          >
            <a
              class="c31"
              href="https://explorer-calibration.glif.link/actor/?address=t1mbk7q6gm4rjlndfqw6f2vkfgqotres3fgicb4uq"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1mbk7 ... icb4uq
            </a>
            <div
              class="c32"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c21 c22"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c23 c24 c25"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
        display="flex"
      >
        <div
          class="c13"
          display="flex"
        >
          <p
            class="c27"
            font-family="RT-Alias-Grotesk"
            font-size="3"
            font-weight="400"
          >
            Balance
          </p>
          <h2
            class="c14"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="400"
          >
            1
             FIL
          </h2>
        </div>
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      class="c34"
      color="colors.core.black"
      display="flex"
      height="11"
      overflow="hidden"
      width="100%"
    >
      <h2
        class="c35"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Create new account
      </h2>
      <div
        class="c17"
      >
        <div
          class="c36"
          display="flex"
        >
          <h4
            class="c37"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
            width="50%"
          >
            Account index
          </h4>
          <input
            class="c38 c39"
            display="inline-block"
            height="6"
            value="5"
            width="50%"
          />
        </div>
        
      </div>
      <div
        class="c17"
      >
        <div
          class="c40"
          display="flex"
        >
          <button
            class="c41"
            display="flex"
            font-family="RT-Alias-Grotesk"
            font-size="1"
            font-weight="1"
            height="6"
            width="50%"
          >
            Legacy address
          </button>
          <button
            class="c42"
            display="flex"
            font-family="RT-Alias-Grotesk"
            font-size="1"
            font-weight="1"
            height="6"
            width="50%"
          >
            Normal address
          </button>
        </div>
        <p
          class="c43"
          font-family="RT-Alias-Grotesk"
          font-size="15px"
          font-weight="400"
        >
          *Not recommended
        </p>
      </div>
      <div
        class="c44"
        display="flex"
        width="100%"
      >
        <button
          class="c33"
          font-size="3"
          height="6"
          type="button"
        >
          Create
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelperText it renders the right text 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

<p
  class="c0"
  font-family="RT-Alias-Grotesk"
  font-size="2"
  font-weight="400"
>
  Test text
</p>
`;
